--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=Dry Meter for Raids
+author=RydawgRS
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=*BETA*A plugin which will keep track of your luck in raids. Only works in solos.
+tags=log,raids,cox,chambers,xeric
+plugins=com.raidsdrymeter.RaidsDryMeterPlugin
