--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Dry Meter for Raids
 author=RydawgRS
-support=
+support=https://github.com/RydawgRS/raids-dry-meter
 description=*BETA*A plugin which will keep track of your luck in raids. Only works in solos.
 tags=log,raids,cox,chambers,xeric
 plugins=com.raidsdrymeter.RaidsDryMeterPlugin
