this adds the points tracking from ToA plugin, changes some of the UI panel to track each kc, and also fixes the usernames/subfolders. work in progress, more of a proof of concept than anything.

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 def runeLiteVersion = 'latest.release'
 
 dependencies {
+    implementation group: 'com.google.inject.extensions', name: 'guice-multibindings', version: '4.1.0', {
+        exclude group: 'com.google.inject'
+    }
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
 
 	compileOnly 'org.projectlombok:lombok:1.18.4'
